transactions all done & currency changer service